@@ -49,8 +49,9 @@ LOG_DIAG=${LOGDIR}/littriageload.diag.log
 LOG_CUR=${LOGDIR}/littriageload.cur.log
 LOG_VAL=${LOGDIR}/littriageload.val.log
 LOG_ERROR=${LOGDIR}/littriageload.error.shtml
+LOG_SQL=${LOGDIR}/littriageload.sql.log
 
-export LOG_FILE LOG_PROC LOG_DIAG LOG_CUR LOG_VAL LOG_ERROR
+export LOG_FILE LOG_PROC LOG_DIAG LOG_CUR LOG_VAL LOG_ERROR LOG_SQL
 
 #  The name of the job stream for the load
 JOBSTREAM=littriageload
